--- a/_includes/card.html
+++ b/_includes/card.html
@@ -2,9 +2,11 @@
 	<div class="newcard newcard_container" data-index="0"> 
 		<div class="newcard_dummy"></div>
 		<div class="newcard_content">
-			<img class="newcard__image" src="images/q.png" alt="">
-			<div class="card_title">交互设计交互设计交互设计交互设</div>
-			<div class="card_desc">简介简介简介简介简介简介简介简介简介简介简介简介简介简</div>
-			<div class="card_time">2016.03.20</div>
+			<a href="{{ site.baseurl }}{{ portfolio.url }}">
+				<img class="newcard__image" src="{{ site.baseurl }}/{{ portfolio.icon }}" alt="">
+				<div class="card_title">{{ portfolio.title }}</div>
+				<div class="card_desc">{{ portfolio.summary }}</div>
+			</a>
+			<div class="card_time">{{ portfolio.date | date: "%b %-d, %Y" }}</div>
 		</div>
 	</div>
