--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -21,7 +21,7 @@ $small-spacing: $base-spacing / 2;
 $base-z-index: 0;
 
 // Colors
-$primary-color: #337ab7;
+$primary-color: #7b7b7b;
 $white-color: #fff;
 $black-color: #000;
 $blue-color: #477dca;
