--- a/_scss/base/_reset.scss
+++ b/_scss/base/_reset.scss
@@ -19,9 +19,10 @@ time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  font-size: 16px;
+  font-family: FZLanTingHeiS-EL-GB;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
