--- a/css/card.css
+++ b/css/card.css
@@ -4,11 +4,9 @@
 .newcard {
 	position: relative;
 	float: left;
-	max-width: 30%;
+	max-width: 32%;
 	max-height: 100%;
 	border:#F3f3f3 1px solid;
-
-	
 }
 
 .newcard__container {
@@ -104,32 +102,28 @@
 	cursor: pointer;
 }
 
-.newcard__container--closed .newcard__btn-close {
-	display: none;
-}
-
 
 /* newcards wrapper and close btn */
 
 .wrapper {
 	overflow: auto;
 	width: 100%;
-	height: 300px;
+	height: 400px;
 	max-width: 1000px;
-	max-height: 300px;
+	max-height: 400px;
 }
 
 
 .newcard_margin {
-	width: 5%;
+	width: 2%;
 	float: left;
-	height: 100%;
+	height: 20px;
 }
 
 
 .newcard_container{
-  
     width:100%;
+    height:100%;
     position:relative;
     display: inline-block;
 }
@@ -144,28 +138,27 @@
     bottom:2%;
 }
 
-.card_title{
-	padding-top: 1%;
+.card_title{    
 	font-family: FZLanTingHei-R-GBK;
-	font-size: 16px;
-	height:27px;
-	overflow: hidden;
-	
+    font-size: 16px;
+    height: 35px;
+    line-height: 35px;
+    overflow: hidden;
 }
 
 .card_desc{
-	padding-top: 1%;
-	padding-bottom: 1%;
-	font-family: FZLanTingHeiS-EL-GB;
-	overflow: hidden;
-	font-size: 14px;
-	height:50px;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    font-family: FZLanTingHeiS-EL-GB;
+    overflow: hidden;
+    font-size: 14px;
+    height: 70px;
 }
 
 .card_time{
-	padding-bottom: 2%;
-	font-family: Futura LT Light;
-	overflow: hidden;
-	font-size: 14px;
-	height:20px;
+	padding-top: 1%;
+    font-family: Futura LT Light;
+    overflow: hidden;
+    font-size: 12px;
+    height: 18px;
 }
