--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -218,7 +218,7 @@ body.home {
   text-align: center;
   display: inline-block;
   width:272px;
-  margin:0 auto;
+  margin:20px auto 0 auto;
   height: 200px;
   padding-top: 5px;
 
@@ -413,7 +413,7 @@ body.home {
 }
 
 .portfolio_header {
-  margin-top:40px;
+  margin-top:30px;
   position: relative;
 
 }
