--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="site-footer">
   <div class="container">
     <p class="txt-medium-gray">
-      <small>&copy;{{ site.time | date: '%Y' }} All rights reserved. Made with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> and ♥</small>
+      <small>&copy;{{ site.time | date: '%Y' }}  &nbsp;&nbsp;Designed and built by Lisa | Email：lisaz_zls@163.com | WeChat：562855637</small>
     </p>
   </div>
 </footer>
