--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,5 +4,7 @@
   <body class="home">
       {{ content }}
       <!-- {% include github-corner.html %} -->
+
+      {% include footer.html %}
   </body>
 </html>
