--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
   <div class="container">
-    <h1><a href="{{ "/" | prepend: site.baseurl }}"><span id="lisa">Lisa</span></a></h1>
+    <h1><a id="lisa" href="{{ "/" | prepend: site.baseurl }}">Lisa</a></h1>
 
     <button type="button" class="sliding-panel-button">
       <span></span>
