--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -28,7 +28,7 @@
         {{ content }}
       </div>
 
-      <!-- {% include footer.html %} -->
+      {% include footer.html %}
 
     
     </main>
