--- a/_layouts/portfolio_index.html
+++ b/_layouts/portfolio_index.html
@@ -4,7 +4,7 @@
   <body>
     <main>
 
-      <div class="container">
+      <div class="portfolio_container">
         {{ content }}
       </div>
 
