--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,7 @@
      <link rel="stylesheet" href="{{ "/css/promote.css" | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+    <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/images/120.png">
 
       <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
       <script>
