调整头图加载前背景色

--- a/css/promote.css
+++ b/css/promote.css
@@ -2,7 +2,7 @@
 	width: 100%;
 	height: 400px;
 	background-size: cover;
-	background-color: #eee;
+	background-color: #4b4b4b;
 }
 
 .article_summary {
